@@ -1,5 +1,12 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.431 2005/12/07 21:33:43 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.432 2005/12/07 21:57:59 wolf31o2 Exp $
+
+  07 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/livecd-stage2/unmerge.sh:
+  Removed profiles hack from livecd-stage2's unmerge, since it isn't used
+  anymore and probably should have been removed a long time ago when the new
+  code was put into place in livecdfs-update.sh and livecd-local.start
+  instead.
 
   07 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
   targets/livecd-stage1/livecd-stage1-chroot.sh,
